# linux-stt

./: .gitignore  CLAUDE.md  config.example.json  docker-compose.yml  pyproject.toml
.github/workflows/: build-appimage.yml
appimage/: AppRun  build-appimage.sh  linux-stt.desktop
docker/: Dockerfile  requirements-docker.txt
packaging/appimage/: AppRun  build-appimage.sh
scripts/: 99-linux-stt.rules  install.sh  linux-stt.service  uninstall.sh
src/linux_stt/: __init__.py  audio.py  config.py  feedback.py  gui.py  hotkey.py  main.py  output.py  transcribe.py
web/: app.py
web/templates/: index.html
