# Linux SenseVoice STT - Project Configuration
# Version: 1.0
# Push-to-talk speech-to-text for Linux using SenseVoice

[project]
name = "linux-stt"
version = "0.1.0"
description = "Push-to-talk speech-to-text for Linux using SenseVoice"
requires-python = ">=3.10"
dependencies = [
    "evdev>=1.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "funasr>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
linux-stt = "linux_stt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linux_stt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
